--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p3.html">
               <div class="img-box">
                 <img src="images/p3.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -222,7 +222,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p4.html">
               <div class="img-box">
                 <img src="images/p4.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
