--- a/public/index.html
+++ b/public/index.html
@@ -247,7 +247,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p5.html">
               <div class="img-box">
                 <img src="images/p5.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -272,7 +272,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p6.html">
               <div class="img-box">
                 <img src="images/p6.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
