--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p7.html">
               <div class="img-box">
                 <img src="images/p7.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -322,7 +322,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p8.html">
               <div class="img-box">
                 <img src="images/p8.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
