--- a/public/shop.html
+++ b/public/shop.html
@@ -134,7 +134,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p2.html">
               <div class="img-box">
                 <img src="images/p2.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -159,7 +159,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p3.html">
               <div class="img-box">
                 <img src="images/p3.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -184,7 +184,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p4.html">
               <div class="img-box">
                 <img src="images/p4.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -209,7 +209,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p5.html">
               <div class="img-box">
                 <img src="images/p5.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -234,7 +234,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p6.html">
               <div class="img-box">
                 <img src="images/p6.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -259,7 +259,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p7.html">
               <div class="img-box">
                 <img src="images/p7.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -284,7 +284,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p8.html">
               <div class="img-box">
                 <img src="images/p8.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
