--- a/public/shop1.html
+++ b/public/shop1.html
@@ -140,7 +140,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p2.html">
               <div class="img-box">
                 <img src="images/p2.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -165,7 +165,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p3.html">
               <div class="img-box">
                 <img src="images/p3.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -190,7 +190,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p4.html">
               <div class="img-box">
                 <img src="images/p4.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -215,7 +215,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p5.html">
               <div class="img-box">
                 <img src="images/p5.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -240,7 +240,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p6.html">
               <div class="img-box">
                 <img src="images/p6.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -265,7 +265,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p7.html">
               <div class="img-box">
                 <img src="images/p7.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -290,7 +290,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p8.html">
               <div class="img-box">
                 <img src="images/p8.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
