--- a/public/shop1.html
+++ b/public/shop1.html
@@ -318,7 +318,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p9.html">
               <div class="img-box">
 
                 <img src="images/p9.jpg" alt="p2" style="width: 100%; height: auto;"></src>
@@ -344,7 +344,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p10.html">
               <div class="img-box">
                 <img src="images/p10.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -369,7 +369,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p11.html">
               <div class="img-box">
                 <img src="images/p11.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -394,7 +394,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p12.html">
               <div class="img-box">
                 <img src="images/p12.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
