--- a/public/shop1.html
+++ b/public/shop1.html
@@ -419,7 +419,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p13.html">
               <div class="img-box">
                 <img src="images/p13.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -444,7 +444,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p14.html">
               <div class="img-box">
                 <img src="images/p16.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -469,7 +469,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p15.html">
               <div class="img-box">
                 <img src="images/p15.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -494,7 +494,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="p16.html">
               <div class="img-box">
                 <img src="images/p14.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
