--- a/public/p11.html
+++ b/public/p11.html
@@ -115,22 +115,11 @@
 
             <!-- Package Size -->
             <div class="form-group">
-              <label for="size">Package Size:</label>
+              <label for="size">Size of bottle :</label>
               <select id="size" name="size" class="form-control">
-                <option value="small">Small (2kg)</option>
-                <option value="medium">Medium (5kg)</option>
-                <option value="large">Large (10kg)</option>
-              </select>
-            </div>
-
-            <!-- Food Flavor -->
-            <div class="form-group">
-              <label for="flavor">Flavor:</label>
-              <select id="flavor" name="flavor" class="form-control">
-                <option value="chicken">chocolate</option>
-                <option value="beef">vanilla</option>
-                <option value="lamb">strawberry</option>
-                <option value="salmon">coconut</option>
+                <option value="small">Small(500ml)</option>
+                <option value="medium">Medium (1.5L)</option>
+                <option value="large">Large (2L)</option>
               </select>
             </div>
           </div>
