--- a/public/p14.html
+++ b/public/p14.html
@@ -127,10 +127,9 @@
             <div class="form-group">
               <label for="flavor">Flavor:</label>
               <select id="flavor" name="flavor" class="form-control">
-                <option value="chicken">chocolate</option>
-                <option value="beef">vanilla</option>
-                <option value="lamb">strawberry</option>
-                <option value="salmon">coconut</option>
+                <option value="chicken">mint</option>
+                <option value="beef">spearmint</option>
+             
               </select>
             </div>
           </div>
