--- a/public/p15.html
+++ b/public/p15.html
@@ -117,9 +117,9 @@
             <div class="form-group">
               <label for="size">Package Size:</label>
               <select id="size" name="size" class="form-control">
-                <option value="small">Small (2kg)</option>
-                <option value="medium">Medium (5kg)</option>
-                <option value="large">Large (10kg)</option>
+                <option value="small">Small</option>
+                <option value="medium">Medium</option>
+                <option value="large">Large</option>
               </select>
             </div>
 
@@ -127,10 +127,9 @@
             <div class="form-group">
               <label for="flavor">Flavor:</label>
               <select id="flavor" name="flavor" class="form-control">
-                <option value="chicken">chocolate</option>
-                <option value="beef">vanilla</option>
-                <option value="lamb">strawberry</option>
-                <option value="salmon">coconut</option>
+                <option value="chicken">mint</option>
+                <option value="beef">spearmint</option>
+                
               </select>
             </div>
           </div>
