--- a/public/p16.html
+++ b/public/p16.html
@@ -95,7 +95,7 @@
     <div class="row">
       <!-- Product Image -->
       <div class="col-md-6">
-        <img src="images/p16.jpg" class="product-image w-100" alt="Bundle Dog Food">
+        <img src="images/p14.jpg" class="product-image w-100" alt="Bundle Dog Food">
       </div>
 
       <!-- Product Details -->
@@ -115,25 +115,15 @@
 
             <!-- Package Size -->
             <div class="form-group">
-              <label for="size">Package Size:</label>
+              <label for="size">Size of bed:</label>
               <select id="size" name="size" class="form-control">
-                <option value="small">Small (2kg)</option>
-                <option value="medium">Medium (5kg)</option>
-                <option value="large">Large (10kg)</option>
+                <option value="small">Small</option>
+                <option value="medium">Medium</option>
+                <option value="large">Large</option>
               </select>
             </div>
 
-            <!-- Food Flavor -->
-            <div class="form-group">
-              <label for="flavor">Flavor:</label>
-              <select id="flavor" name="flavor" class="form-control">
-                <option value="chicken">chocolate</option>
-                <option value="beef">vanilla</option>
-                <option value="lamb">strawberry</option>
-                <option value="salmon">coconut</option>
-              </select>
-            </div>
-          </div>
+          
 
           <!-- Add to Cart Button -->
           <button class="btn btn-dark btn-block mt-4">Add to Cart</button>
