--- a/public/basket.html
+++ b/public/basket.html
@@ -1,7 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Basket</title>
+ 
+ <!DOCTYPE html>
+<html lang="en">
+    <head>
+ 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pup & Purr - Basket</title>
+
+   
+    <!-- main styles of the project -->
+    <link rel="stylesheet" href="css/style.css">
+
+    
+    <style>
+        body {
+            font-family: "Poppins", sans-serif;
+        }
+
 </head>
 <body>
 
