--- a/public/basket.html
+++ b/public/basket.html
@@ -17,6 +17,29 @@
             font-family: "Poppins", sans-serif;
         }
 
+        /* the top header styles and designs  */
+        header {
+            background: #fefbe6;
+            padding: 10px 20px;
+            border-bottom: 2px solid #7b8e4e;
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .navbar-brand img {
+            height: 50px;
+        }
+
 </head>
 <body>
 
