--- a/public/basket.html
+++ b/public/basket.html
@@ -40,6 +40,22 @@
             height: 50px;
         }
 
+        .navbar-links {
+            display: flex;
+            gap: 20px;
+        }
+
+        .navbar-links a {
+            text-decoration: none;
+            color: #426b1f;
+            font-size: 16px;
+            text-transform: uppercase;
+        }
+
+        .navbar-links a:hover {
+            font-weight: bold;
+        }
+
 </head>
 <body>
 
