--- a/public/basket.html
+++ b/public/basket.html
@@ -119,6 +119,29 @@
             color: #333;
         }
 
+        .item-price {
+            font-weight: bold;
+            color: #7b8e4e;
+        }
+
+        .summary-title {
+            font-size: 24px;
+            color: #426b1f;
+            margin-bottom: 15px;
+        }
+
+        .summary-details {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        .summary-total {
+            font-size: 18px;
+            font-weight: bold;
+            color: #426b1f;
+        }
+
 </head>
 <body>
 
