--- a/public/p7.html
+++ b/public/p7.html
@@ -95,15 +95,15 @@
     <div class="row">
       <!-- Product Image -->
       <div class="col-md-6">
-        <img src="images/p7.jpg" class="product-image w-100" alt="Bundle Dog Food">
+        <img src="images/p7.jpg" class="product-image w-100" alt="Bundle cat Food">
       </div>
 
       <!-- Product Details -->
       <div class="col-md-6">
         <div class="product-details">
-          <h1>Bundle Dog Food</h1>
-          <h3 class="text-success">£25.99</h3>
-          <p>High-quality dog food to keep your pet healthy and happy. Packed with nutrients and taste your dog will love!</p>
+          <h1>Wet Mixed Cat Food</h1>
+          <h3 class="text-success">£20</h3>
+          <p>High-quality cat food to keep your pet healthy and happy. Packed with nutrients and taste your cat will love!</p>
 
           <!-- Product Options -->
           <div class="product-options">
@@ -153,7 +153,7 @@
       </ul>
       <div class="tab-content" id="productTabContent">
         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-          <p class="mt-3">This premium dog food is designed to meet the highest nutritional standards. Perfect for active dogs and those with special dietary needs.</p>
+          <p class="mt-3">This premium cat food is designed to meet the highest nutritional standards. Perfect for active cats and those with special dietary needs.</p>
         </div>
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
           <p class="mt-3">No reviews yet. Be the first to review this product!</p>
