--- a/public/p9.html
+++ b/public/p9.html
@@ -101,10 +101,9 @@
       <!-- Product Details -->
       <div class="col-md-6">
         <div class="product-details">
-          <h1>Bundle Dog Food</h1>
-          <h3 class="text-success">£25.99</h3>
-          <p>High-quality dog food to keep your pet healthy and happy. Packed with nutrients and taste your dog will love!</p>
-
+          <h1> Dog Toys</h1>
+          <h3 class="text-success">£45</h3>
+<p>Toys for your pets that would make them fall in love </p>
           <!-- Product Options -->
           <div class="product-options">
             <!-- Quantity -->
@@ -143,7 +142,7 @@
       </ul>
       <div class="tab-content" id="productTabContent">
         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-          <p class="mt-3">This premium dog food is designed to meet the highest nutritional standards. Perfect for active dogs and those with special dietary needs.</p>
+          <p class="mt-3">This premium dog toy is designed to meet the highest standards. </p>
         </div>
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
           <p class="mt-3">No reviews yet. Be the first to review this product!</p>
