--- a/public/p11.html
+++ b/public/p11.html
@@ -101,9 +101,9 @@
       <!-- Product Details -->
       <div class="col-md-6">
         <div class="product-details">
-          <h1>Bundle Dog Food</h1>
-          <h3 class="text-success">£25.99</h3>
-          <p>High-quality dog food to keep your pet healthy and happy. Packed with nutrients and taste your dog will love!</p>
+          <h1>Dog Shampoo</h1>
+          <h3 class="text-success">£10</h3>
+          <p>High-quality dog Shampoo to keep your pet healthy and happy.</p>
 
           <!-- Product Options -->
           <div class="product-options">
@@ -142,7 +142,7 @@
       </ul>
       <div class="tab-content" id="productTabContent">
         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-          <p class="mt-3">This premium dog food is designed to meet the highest nutritional standards. Perfect for active dogs and those with special dietary needs.</p>
+          <p class="mt-3">This premium dog shampoo is designed to meet the highest healthy standards. </p>
         </div>
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
           <p class="mt-3">No reviews yet. Be the first to review this product!</p>
