--- a/public/p16.html
+++ b/public/p16.html
@@ -101,9 +101,9 @@
       <!-- Product Details -->
       <div class="col-md-6">
         <div class="product-details">
-          <h1>Bundle Dog Food</h1>
-          <h3 class="text-success">£25.99</h3>
-          <p>High-quality dog food to keep your pet healthy and happy. Packed with nutrients and taste your dog will love!</p>
+          <h1>Dog Dental Products</h1>
+          <h3 class="text-success">£50</h3>
+          <p>High-quality Dog Dental Products to keep your pet healthy and happy. Packed with nutrients and taste your cat will love!</p>
 
           <!-- Product Options -->
           <div class="product-options">
@@ -152,7 +152,7 @@
       </ul>
       <div class="tab-content" id="productTabContent">
         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-          <p class="mt-3">This premium dog food is designed to meet the highest nutritional standards. Perfect for active dogs and those with special dietary needs.</p>
+          <p class="mt-3">This premium Dog Dental Product is designed to meet the highest nutritional standards./p>
         </div>
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
           <p class="mt-3">No reviews yet. Be the first to review this product!</p>
