--- a/public/shop.html
+++ b/public/shop.html
@@ -338,7 +338,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p1.html">
+            <a href="product/product1">
               <div class="img-box">
 
               <img src = "images/p1.jpg" alt="ring" style="width: 100%; height: auto;"></src>
@@ -365,7 +365,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p2.html">
+            <a href="product/product2">
               <div class="img-box">
                 <img src="images/p2.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
