--- a/public/shop.html
+++ b/public/shop.html
@@ -390,7 +390,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p3.html">
+            <a href="product/product3">
               <div class="img-box">
                 <img src="images/p3.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -415,7 +415,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p4.html">
+            <a href="product/product4">
               <div class="img-box">
                 <img src="images/p4.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
