--- a/public/shop.html
+++ b/public/shop.html
@@ -281,7 +281,6 @@
 
 
 
-<!--this is the end of filter button--> 
 
 <body>
   <div class="hero_area">
@@ -319,10 +318,67 @@
   </div>
   <!-- end hero area -->
  <!-- Search Bar and Filter Button -->
- <form method="GET" action="{{ route('product.search') }}">
-  <input type="text" name="q" placeholder="Search products...">
-  <button type="submit">Search</button>
+  <!-- Search Bar and Filter Button -->
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+      /* Search button styles */
+      form button {
+                background-color: #4B7C47; /* Green button */
+                
+          color: white;
+          border: none;
+          padding: 10px 20px;
+          cursor: pointer;
+          font-size: 16px;
+      }
+
+      form button:hover {
+        background-color: #4b7c65; /* Green button */
+
+      }
+
+      /* Filter button styles */
+      .filter-btn {
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
+                background-color: #4B7C47; /*filter button colour */
+               
+          color: white;
+          text-decoration: none;
+          border: none;
+          padding: 15px 25px;
+          font-size: 16px;
+          cursor: pointer;
+          margin-left: 10px;  /* separation between buttons */
+          height:44px; 
+      }
+
+      .filter-btn:hover {
+        background-color: #4b7c65; /* filter butto */
+
+      }
+
+      .filter-btn i {
+          font-size: 16px;
+      }
+
+      form {
+            display: inline-flex; /* lines up buttons */
+            align-items: center;
+      }
+  </style>
+</head>
+<body>
+  <form method="GET" action="{{ route('product.search') }}">
+      <input type="text" name="q" placeholder="Search products...">
+      <button type="submit">Search</button>
 </form>
+  <a href="#" class="filter-btn" title="Filter">
+      <i class="fas fa-filter"></i>
+  </a>
+</body>
 <!--<a href="#" class="filter-btn">Filter by category</a>
 </body>
 </html>
