--- a/public/shop.html
+++ b/public/shop.html
@@ -309,7 +309,7 @@
       font-size: 13px;
   }
 
-  .search-button {
+  .search-button, .filter-btn {
       background-color: #4B7C47; /* Green button */
       color: white;
       border: none;
@@ -317,22 +317,8 @@
       cursor: pointer;
       font-size: 13px;
   }
-  .search-button:hover{
-      background-color: #4b7c65;
-  }
 
- /* .filter-btn {
-      background-color: #4B7C47; /* Green button 
-      color: white;
-      border: none;
-      padding: 11px 10px;
-      cursor: pointer;
-      font-size: 13px;
-  }
-
-  
-  
-  .filter-btn:hover {
+  .search-button:hover, .filter-btn:hover {
       background-color: #4b7c65;
   }
 
@@ -341,7 +327,7 @@
      
       font-size: 20px;
   }
-*/
+
   .navbar-icons {
       display: flex;
       gap: 10px;
@@ -374,10 +360,10 @@
                 <input type="text" class="search-bar" name="q" placeholder="Search products...">
                 <button type="submit" class="search-button">Search</button>
             </form>
-          <!--<button class="filter-btn" title="Filter">
+            <button class="filter-btn" title="Filter">
                 <i class="fas fa-filter"></i>
             </button>
-        </div> -->  
+        </div>
 
         <!-- Icons Section -->
         <div class="navbar-icons">
